# ddns-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
distribution/openwrt/ddns-rs/: Makefile
distribution/openwrt/ddns-rs/init.d/: ddns-rs
src/: cli.rs  main.rs  model.rs  server.rs  website.rs
src/api/: dns.rs  error.rs  middleware.rs  mod.rs  provider.rs  sys.rs  user.rs  webhook.rs
src/provider/: aliyun.rs  cloudflare.rs  digest.rs  mod.rs  tencent.rs
src/provider/aliyun/: client.rs  schema.rs  signature.rs
src/provider/cloudflare/: client.rs
src/provider/tencent/: client.rs  schema.rs  signature.rs
src/service/: dns.rs  log.rs  mod.rs  store.rs  task.rs  token.rs  webhook.rs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/components/: ConfirmationDialog.tsx  IpAcquisition.tsx
web/src/components/ui/: scroll-area.tsx
web/src/lib/: api.ts  logo.ts  storage.ts  toast.ts
web/src/pages/: App.tsx  Config.tsx  Home.tsx  Initialize.tsx  Log.tsx  Login.tsx  Provider.tsx  Webhook.tsx
web/src/types/: config.ts  provider.ts
