[package]
name = "ddns-rs"
version = "0.0.1"
edition = "2024"

[features]
ansi = [
    "clap/color",
    "tracing-subscriber/ansi"
]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "macros", "query", "json", "original-uri"] }
anyhow = "1"
base64 = "0.22"
bcrypt = "0.17"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
hex = "0.4.3"
hmac = "0.12"
indoc = "2"
itertools = "0.14"
local-ip-address = "0.6"
mime = "0.3"
papaya = "0.2"
percent-encoding = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
sha2 = "0.10"
shadow-rs = { version = "1", default-features = false, features = ["build"] }
thiserror = "2"
time = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "fs", "io-util", "process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "local-time"] }
url = "2.5"
winnow = "0.7"

[dev-dependencies]
dotenvy = "0.15"


[build-dependencies]
shadow-rs = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
lto = true
strip = true